# tokelang-core

./: ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  TRADEMARKS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: classify.rs  engine.rs  error.rs  general_text.rs  lib.rs  options.rs  token_metrics.rs  validator.rs
src/compiler/: coverage.rs  error.rs  mod.rs  normalize.rs  pipeline.rs  segment.rs
src/ir/: error.rs  mod.rs  parser.rs  types.rs
src/symbols/: error.rs  instruction.rs  mod.rs  modifier.rs  output_format.rs  subject.rs  synonym.rs
