[package]
name = "tokelang-core"
version = "0.9.6"
edition = "2024"
rust-version = "1.88"
description = "Compression engine for Tokelang Lite: English-prompt compression middleware over standard tokenizers, with a content-recall validator and safe passthrough fallback."
license = "Apache-2.0"
repository = "https://github.com/tokelang/tokelang-core"
homepage = "https://tokelang.com"
readme = "README.md"
keywords = ["llm", "tokenizer", "compression", "prompt", "nlp"]
categories = ["compression", "text-processing"]
authors = ["Tokelang"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.11"
# In-process cl100k_base tokenizer (pure Rust). Replaces the previous python3 `tiktoken`
# subprocess worker so the engine — and the static `tokelang-cli` binary that bundles it —
# counts real cl100k tokens with no runtime python dependency. BPE ranks are embedded in
# the crate, so counting is fully offline.
tiktoken-rs = "0.7"
